<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.jackg.programmers.challenges.mymaskfind.model.Store"/>

        <variable
            name="data"
            type="Store" />
    </data>

    <androidx.cardview.widget.CardView
        setCardBG="@{data.remain_stat}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:longClickable="false"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{data.name}"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                tools:text="@string/store_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_label_type"
                        android:textAppearance="@android:style/TextAppearance.Material.Small" />

                    <TextView
                        android:id="@+id/textView4"
                        typeText="@{data.type}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        tools:text="약국" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/store_label_state"
                        android:textAppearance="@android:style/TextAppearance.Material.Small" />

                    <TextView
                        android:id="@+id/textView6"
                        setRemain="@{data.remain_stat}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        tools:text="30 ~ 100개" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_label_date"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView8"
                    setDate="@{data.stock_at}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    tools:text="2020/03/12 10:23:40" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_label_dist"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:text="@{data.dist}"
                    tools:text="200 미터" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>